# rrev

./: Cargo.toml
.github/workflows/: test.yml
examples/: echo_server.rs  request_client.rs  ticker_client.rs
src/: client.rs  connection.rs  error.rs  lib.rs  parser.rs  request_error.rs  scheme.rs  sender_manager.rs  server.rs
src/connection/: connection_hdl.rs  event.rs  internal_hdl.rs  receiver.rs  sender.rs
src/scheme/: event.rs  internal.rs  message.rs  reply.rs  request.rs  request_handle.rs  requestable.rs
src/scheme/internal/: message.rs  reply.rs  request.rs
src/scheme/internal/reply/: route_reply.rs
src/scheme/internal/request/: route_request.rs
src/server/: acceptor.rs  connection.rs  connection_passer.rs  error.rs  listener.rs  manager.rs  multi_acceptor.rs  multi_server_handle.rs  server_event.rs  server_handle.rs  server_trait.rs  upgrader.rs
src/server/acceptor/: acceptor_handle.rs
src/server/connection/: connection_hdl.rs  internal_hdl.rs  receiver.rs  scheme.rs  sender.rs
src/server/listener/: listener_handle.rs
src/server/multi_acceptor/: multi_acceptor_handle.rs
