[package]
name = "rrev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.26"
tokio = { version = "1.26.0", features = ["test-util", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.18.0"
tracing = "0.1.37"
url = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
async-trait = "0.1.68"

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }
tokio-test = "0.4.2"
